[project]
name = "stance_gator"
version = "0.0.1"
requires-python = ">=3.9, < 3.13"
dependencies = [
    "torch",
    "torchmetrics",
    "transformers",
    "lightning",
    "jsonargparse[signatures]",

    "torch_geometric",
    "pyg_lib",
    "torch_scatter",
    "torch_sparse",

    "spacy>=3.8.0,<3.9.0",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "de_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl",
    "it_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/it_core_news_sm-3.8.0/it_core_news_sm-3.8.0-py3-none-any.whl",
    "fr_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.8.0/fr_core_news_sm-3.8.0-py3-none-any.whl"

]
[tool.setuptools.packages.find]
include =["stance_gator*"]